--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,30 @@
         "variant": "cpp",
         "bit": "cpp",
         "core": "cpp",
-        "specialfunctions": "cpp"
-    }
+        "specialfunctions": "cpp",
+        "csignal": "cpp",
+        "any": "cpp",
+        "hash_map": "cpp",
+        "hash_set": "cpp",
+        "codecvt": "cpp",
+        "forward_list": "cpp",
+        "unordered_set": "cpp",
+        "regex": "cpp",
+        "source_location": "cpp",
+        "future": "cpp",
+        "shared_mutex": "cpp",
+        "valarray": "cpp"
+    },
+    "python.autoComplete.extraPaths": [
+        "/home/djh/bridgeDP_biped_sim/devel/lib/python3/dist-packages",
+        "/home/djh/blackbird_ws/devel/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages",
+        "/opt/openrobots/lib/python3.8/site-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/djh/bridgeDP_biped_sim/devel/lib/python3/dist-packages",
+        "/home/djh/blackbird_ws/devel/lib/python3/dist-packages",
+        "/opt/ros/noetic/lib/python3/dist-packages",
+        "/opt/openrobots/lib/python3.8/site-packages"
+    ]
 }
